--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Plataforma Interaje</string>
+    <string name="loginActivity_btn_confirm">Acessar</string>
 </resources>
